yaml-examples/homeassistant/homeassistant-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homeassistant
  namespace: default
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:beta
        imagePullPolicy: Always
        ports:
          - containerPort: 8123
        volumeMounts:
          - mountPath: /config
            name: config
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: homeassistant
