yaml-examples/homeassistant/homeassistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: default
spec:
  rules:
  - host: homeassistant.lan
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 8123
        path: /
        pathType: ImplementationSpecific
